[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgbcycles"
version = "1.0.0"
description = "Cycle through RGB Colors"
readme = "README.md"
authors = [{ name = "Gorzan", email = "gorzan0123@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
]
keywords = ["rgb", "colors"]
requires-python = ">=2.0"

[project.urls]
Homepage = "https://github.com/InfinityGorzan/"